Added missing token translation key.

--- a/src/main/resources/assets/chatexchange/lang/en_us.json
+++ b/src/main/resources/assets/chatexchange/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.chatexchange": "Chat Exchange",
   "modid.config.host": "Host",
-  "modid.config.port": "Port"
+  "modid.config.port": "Port",
+  "modid.config.token": "Token"
 }
