Added language support for Chinese.

--- a/src/main/resources/assets/chatexchange/lang/en_us.json
+++ b/src/main/resources/assets/chatexchange/lang/en_us.json
@@ -2,5 +2,6 @@
   "itemGroup.chatexchange": "Chat Exchange",
   "modid.config.host": "Host",
   "modid.config.port": "Port",
-  "modid.config.token": "Token"
+  "modid.config.token": "Token",
+  "modid.config.language": "Language"
 }
