Added toggles for broadcasting.

--- a/src/main/resources/assets/chatexchange/lang/en_us.json
+++ b/src/main/resources/assets/chatexchange/lang/en_us.json
@@ -3,5 +3,10 @@
   "modid.config.host": "Host",
   "modid.config.port": "Port",
   "modid.config.token": "Token",
-  "modid.config.language": "Language"
+  "modid.config.language": "Language",
+  "modid.config.ignoreBotRegex": "Ignore Bot Regex",
+  "modid.config.chat": "Enable Chatting",
+  "modid.config.joinLeave": "Enable Join/Leave",
+  "modid.config.death": "Enable Death",
+  "modid.config.advancement": "Enable Advancement"
 }
