--- a/src/main/resources/assets/chatexchange/lang/zh_cn.json
+++ b/src/main/resources/assets/chatexchange/lang/zh_cn.json
@@ -1,5 +1,7 @@
 {
   "itemGroup.chatexchange": "Chat Exchange",
+  "chatexchange.const.enabled": "§2已启用§r",
+  "chatexchange.const.disabled": "§c已禁用§r",
   "modid.config.host": "主机",
   "modid.config.port": "端口",
   "modid.config.token": "令牌",
@@ -9,9 +11,10 @@
   "modid.config.joinLeave": "启用加入/离开消息",
   "modid.config.death": "启用死亡消息",
   "modid.config.advancement": "启用进度消息",
-  "modid.command.chatexchange.description": "§3§lChatExchange 帮助§r\n若服务器开启了广播聊天消息，你的聊天消息默认会被自动广播到外部端口。\n你可以使用 /chatexchange broadcastme 来控制你的消息是否被广播。\n同时，在发送消息前加上@广播/@broadcast/@bc前缀也可以广播你的消息。",
-  "modid.command.chatexchange.broadcastme.on": "你的聊天消息现在会被广播了。",
-  "modid.command.chatexchange.broadcastme.off": "你的聊天消息现在不会被广播了。",
-  "modid.command.chatexchange.broadcastme.ison": "你的聊天消息当前会被广播。",
-  "modid.command.chatexchange.broadcastme.isoff": "你的聊天消息当前不会被广播。"
+  "chatexchange.command.chatexchange.description": "§3§lChatExchange 帮助§r\n若服务器开启了广播聊天消息，你的聊天消息默认会被自动广播到外部端口。\n你可以使用 /chatexchange broadcastme 来控制你的消息是否被广播。\n同时，在发送消息前加上@广播/@broadcast/@bc前缀也可以广播你的消息。",
+  "chatexchange.command.chatexchange.status": "聊天消息: %s\n加入/离开消息: %s\n死亡消息: %s\n进度消息: %s",
+  "chatexchange.command.chatexchange.broadcastme.on": "你的聊天消息现在会被广播了。",
+  "chatexchange.command.chatexchange.broadcastme.off": "你的聊天消息现在不会被广播了。",
+  "chatexchange.command.chatexchange.broadcastme.ison": "你的聊天消息当前会被广播。",
+  "chatexchange.command.chatexchange.broadcastme.isoff": "你的聊天消息当前不会被广播。"
 }
