Added mixin mode to receive chat.

--- a/src/main/resources/assets/chatexchange/lang/en_us.json
+++ b/src/main/resources/assets/chatexchange/lang/en_us.json
@@ -6,6 +6,7 @@
   "modid.config.port": "Port",
   "modid.config.token": "Token",
   "modid.config.language": "Language",
+  "modid.config.mixinMode": "Mixin Mode",
   "modid.config.ignoreBotRegex": "Ignore Bot Regex",
   "modid.config.chat": "Enable Chatting",
   "modid.config.joinLeave": "Enable Join/Leave",
