--- a/src/main/resources/assets/chatexchange/lang/en_us.json
+++ b/src/main/resources/assets/chatexchange/lang/en_us.json
@@ -15,6 +15,7 @@
   "modid.config.advancement": "Enable Advancement",
   "modid.config.broadcastPrefix": "Broadcast Prefix",
   "modid.config.commandBroadcastFormat": "Command Broadcast Format",
+  "modid.config.receiveMessageFormat": "Receive Message Format",
   "chatexchange.command.chatexchange.description": "§3§lChatExchange Help§r\nIf the server has enabled broadcasting chat messages, your chat messages will be broadcast to an external port by default.\nYou can use /chatexchange broadcastme to control whether your chat messages will be broadcast.\nAlso, you can broadcast your messages by prefixing @broadcast/@bc.",
   "chatexchange.command.chatexchange.status": "Chat: %s\nJoin/Leave: %s\nDeath: %s\nAdvancement: %s",
   "chatexchange.command.chatexchange.broadcastme.on": "Your chat messages will now be broadcast.",
