--- a/src/main/resources/assets/chatexchange/lang/zh_cn.json
+++ b/src/main/resources/assets/chatexchange/lang/zh_cn.json
@@ -3,6 +3,7 @@
   "chatexchange.const.enabled": "§2已启用§r",
   "chatexchange.const.disabled": "§c已禁用§r",
   "chatexchange.const.exception": "§4发生了内部错误。§r",
+  "chatexchange.const.onlyPlayer": "§4只有玩家可以使用这个命令。§r",
   "modid.config.host": "主机",
   "modid.config.port": "端口",
   "modid.config.token": "令牌",
@@ -16,7 +17,7 @@
   "modid.config.broadcastPrefix": "广播前缀",
   "modid.config.commandBroadcastFormat": "命令广播格式",
   "modid.config.receiveMessageFormat": "接收消息格式",
-  "chatexchange.command.chatexchange.description": "§3§lChatExchange 帮助§r\n若服务器开启了广播聊天消息，你的聊天消息默认会被自动广播到外部端口。\n你可以使用 /chatexchange broadcastme 来控制你的消息是否被广播。\n同时，在发送消息前加上@广播/@broadcast/@bc前缀也可以广播你的消息。",
+  "chatexchange.command.chatexchange.description": "§3§lChatExchange 帮助§r\n若服务器开启了广播聊天消息，你的聊天消息默认会被自动广播到外部端口。\n你可以使用 /chatexchange broadcastme 来控制你的消息是否被广播。\n同时，在发送消息前加上 %s 前缀也可以广播你的消息。",
   "chatexchange.command.chatexchange.status": "聊天消息: %s\n加入/离开消息: %s\n死亡消息: %s\n进度消息: %s",
   "chatexchange.command.chatexchange.broadcastme.on": "你的聊天消息现在会被广播了。",
   "chatexchange.command.chatexchange.broadcastme.off": "你的聊天消息现在不会被广播了。",
